# SVM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
SVM/: CMakeLists.txt  SVM.cpp  SVM.h  bytecode_processor.cpp  bytecode_processor.h  flexible_stack.h  globals.cpp  globals.h  utils.cpp  utils.h
SVM/functions/: CMakeLists.txt  all.h  base_include.h  logic.cpp  logic.h  math.cpp  math.h  process_flow.cpp  process_flow.h  registers.cpp  registers.h  stack.cpp  stack.h  system.cpp  system.h
